# kaprekars-constants

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md
benches/: benchmark.rs  simple.rs  tokio.rs  types.rs
data/: nums.csv  nums.ods
src/: algo.rs  calc.rs  digits.rs  io.rs  kaprekars.rs  lib.rs  main.rs  numbers.rs  tokio.rs
src/algo_impls/: algo128.rs  algo16.rs  algo32.rs  algo64.rs  algoisize.rs  algou32.rs  mod.rs
