[package]
name = "kaprekars-constants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }

[[bench]]
name = "types"
harness = false

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "tokio"
harness = false
